@@ -1,3 +1,9 @@
+2009-11-06  Marek Habersack  <mhabersack@novell.com>
+
+	* mod_mono.c (fork_mod_mono_server): initialize supplementary
+	group ids after forking. Patch from Philip Tricca
+	<flihp@twobit.us>, thanks!
+
 2009-09-21  Marek Habersack  <mhabersack@novell.com>
 
 	* mod_mono.c: added new directive to disable hidden file/directory
